--- a/Freequiz/templates/base.html
+++ b/Freequiz/templates/base.html
@@ -5,8 +5,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="{% static 'img/fav/fav.ico' %}" type="image">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
+        <link rel="icon" href="{% static 'favicon.svg' %}" type="image/svg">
+        <link 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" 
+            rel="stylesheet"
+            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
+            crossorigin="anonymous">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
         <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
         <meta name="msapplication-TileColor" content="#000">
@@ -16,16 +20,21 @@
             {% endblock %}
         </title>
     </head>
-    <body>
-        <header>
-            <h1>FREEQUIZ</h1>
-        </header>
-        <main>
+    <body class="bg-dark">
+        <div class="container top-50 start-0 bg-light">
+            <div class="row position-absolute top-0 start-50">
+                <div class="col-2 top-50 start-0">
+                    <img 
+                        src="{{ STATIC_URL }}/static/favicon.svg"
+                        width="255"
+                        height="255"
+                    >
+                </div>
+            </div>
+        </div>
+        <main class="position-absolute col-12 bg-light top-50 start-0">
             {% block content %}
             {% endblock %}
         </main>
-        <footer>
-            <h3>FREEQUIZ</h3>
-        </footer>
     </body>
 </html>
