--- a/Freequiz/templates/base.html
+++ b/Freequiz/templates/base.html
@@ -11,6 +11,7 @@
             rel="stylesheet"
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
             crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="static/visual.css">    
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
         <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
         <meta name="msapplication-TileColor" content="#000">
@@ -21,7 +22,7 @@
         </title>
     </head>
     <body class="bg-dark">
-        <div class="container top-50 start-0 bg-light">
+        <div class="container top-50 start-0 bg-green">
             <div class="row position-absolute top-0 start-50">
                 <div class="col-2 top-50 start-0">
                     <img 
