--- a/Freequiz/templates/index.html
+++ b/Freequiz/templates/index.html
@@ -5,32 +5,36 @@
 {% endblock %}
 
 {% block content %}
-    <br>
-    {% for test in tests %}
-        <div class="card col-4 top-50 start-50 translate-middle-x">
-            <div class="blocks">
-                <div class="card-body">
-                    <h4 class="card-title">{{ test.name }}</h4>
-                    <hr>
-                    <p class="card-text">{{ test.description }}</p>
-                    <a class="btn btn-outline-primary" href="{% url 'tests:quiz' test.slug %}">Пройти тест</a>
-                </div>    
+    <div class="position-absolute col-12 bg-light start-0">
+        <br>
+        {% for test in tests %}
+            <div class="card col-4 top-50 start-50 translate-middle-x">
+                <div class="blocks">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ test.name }}</h4>
+                        <hr>
+                        <p class="card-text text-secondary">{{ test.description }}</p>
+                        <a class="btn btn-outline-primary" href="{% url 'tests:quiz' test.slug %}">Пройти тест</a>
+                    </div>    
+                </div>
+            </div>
+            <br>
+        {% endfor %}
+        <br>
+        <div class="card bg-white col-2 top-50 start-50 translate-middle-x">
+            <div class="card-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col text-center">
+                            <p class="card-text font-weight-bold"><i>Вы можете создать свой тест</i></p>
+                            <div class="d-grid gap-2">
+                                <a class="btn btn-outline-dark" href="{% url 'admin:tests_blueprinttest_add' %}">Создать тест</a> 
+                            </div>
+                        </div>
+                    </div>
+                </div>   
             </div>
         </div>
         <br>
-    {% endfor %}
-    <br>
-    <div class="card bg-white col-2 top-50 start-50 translate-middle-x">
-        <div class="card-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <p class="card-text font-weight-bold"><i>Вы можете создать свой тест</i></p>
-                        <a class="btn btn-outline-dark" href="{% url 'tests:create_quiz' %}">Создать тест</a> 
-                    </div>
-                </div>
-            </div>   
-        </div>
     </div>
-    <br>
 {% endblock %}
