js scripts - well done, template - well done

--- a/Freequiz/templates/start_test.html
+++ b/Freequiz/templates/start_test.html
@@ -15,7 +15,7 @@
         <div class="not_allocated">
             <br>
                 {% include 'includes/test_lable.html' %}
-                <form id="quiz-from" class="mt-3 mb-3">
+                <form id="quiz-from" class="form-group">
                     {% csrf_token %}
                     <div id="quiz-box"></div>
                     </div>
