--- a/Freequiz/templates/includes/test_lable.html
+++ b/Freequiz/templates/includes/test_lable.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="card shadow-sm col-4 top-50 start-50 translate-middle-x">
+<div class="card shadow-sm col-4 border-0 top-50 start-50 translate-middle-x">
     <div class="blocks">
         <br>
         {% if is_closed %}
@@ -7,8 +7,8 @@
                 <div class="row">
                     <svg 
                         xmlns="http://www.w3.org/2000/svg"
-                        width="100"
-                        height="100"
+                        width="90"
+                        height="90"
                         fill="#6c757d"
                         class="bi bi-lock-fill"
                         viewBox="0 0 16 16">
@@ -38,9 +38,9 @@
             <div class="card-body">
                 <h4 class="text-center text-secondary">{{ name }}</h4>
                 <p class="text-center font-weight-light text-secondary">{{ description }}</p><br>
-                <p class="text-center text-secondary"><i>Предельное время для прохождения: {{ timelimit }}</i></p><br id="tabulation">
+                <p class="text-center text-secondary" id="timerDown"><i>Предельное время для прохождения: {{ timelimit }}</i></p><br id="tabulation">
                 <div class="d-grid gap-2">
-                    <a id="startTest" class="btn btn-outline-success">Начать</a> 
+                    <a id="startTest" class="btn btn-outline-dark rounded-pill">Начать</a> 
                 </div>
             </div>
         {% endif %}
