--- a/Freequiz/templates/index.html
+++ b/Freequiz/templates/index.html
@@ -8,13 +8,13 @@
     <div class="position-absolute col-12 bg-light start-0">
         <br>
         {% for test in tests %}
-            <div class="card col-4 top-50 start-50 translate-middle-x">
+            <div class="card col-4 top-50 start-50 translate-middle-x border-0 border-radius-pill">
                 <div class="blocks">
-                    <div class="card-body">
+                    <div class="card-body border-0">
                         <h4 class="card-title">{{ test.name }}</h4>
                         <hr>
                         <p class="card-text text-secondary">{{ test.description }}</p>
-                        <a class="btn btn-outline-primary" href="{% url 'tests:quiz' test.slug %}">Пройти тест</a>
+                        <a class="btn btn-outline-primary rounded-pill" href="{% url 'tests:quiz' test.slug %}">Пройти тест</a>
                     </div>    
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         <div class="col text-center">
                             <p class="card-text font-weight-bold"><i>Вы можете создать свой тест</i></p>
                             <div class="d-grid gap-2">
-                                <a class="btn btn-outline-dark" href="{% url 'admin:tests_blueprinttest_add' %}">Создать тест</a> 
+                                <a class="btn btn-outline-dark rounded-pill" href="{% url 'admin:tests_blueprinttest_add' %}">Создать тест</a> 
                             </div>
                         </div>
                     </div>
