main logic of checking the answers of test - well done!

--- a/Freequiz/templates/start_test.html
+++ b/Freequiz/templates/start_test.html
@@ -15,7 +15,7 @@
         <div class="not_allocated">
             <br>
                 {% include 'includes/test_lable.html' %}
-                <form id="quiz-from" class="form-group">
+                <form id="quiz-form" class="form-group">
                     {% csrf_token %}
                     <div id="quiz-box"></div>
                     </div>
