admin panel was updated!

--- a/Freequiz/templates/index.html
+++ b/Freequiz/templates/index.html
@@ -31,7 +31,7 @@
                         <div class="col text-center">
                             <p class="card-text font-weight-bold"><i>Вы можете создать свой тест</i></p>
                             <div class="d-grid gap-2">
-                                <a class="btn btn-outline-dark rounded-pill" href="{% url 'admin:tests_blueprinttest_add' %}">Создать тест</a> 
+                                <a class="btn btn-outline-dark rounded-pill" href="{% url 'admin:tests_test_add' %}">Создать тест</a> 
                             </div>
                         </div>
                     </div>
