--- a/Freequiz/templates/base.html
+++ b/Freequiz/templates/base.html
@@ -8,8 +8,8 @@
         <link rel="icon" href="{% static 'favicon.svg' %}" type="image/svg">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
         <link rel="stylesheet" type="text/css" href="{% static 'css/visual.css' %}">    
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+        <link rel="icon" type="image/svg" sizes="32x32" href="{% static 'favicon.svg' %}">
+        <link rel="icon" type="image/svg" sizes="16x16" href="{% static 'favicon.svg' %}">
         <meta name="msapplication-TileColor" content="#000">
         <meta name="theme-color" content="#ffffff">
         <script src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
