results after test will be show

--- a/Freequiz/templates/includes/notification.html
+++ b/Freequiz/templates/includes/notification.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="">
-    <div class="notification card shadow-sm col-4 top-50 start-50 translate-middle-x border-0 bg-{{ notification.status }} border-radius-pill">
+    <div id="NOTIFICATION" class="notification card shadow-sm col-4 top-50 start-50 translate-middle-x border-0 bg-{{ notification.status }} border-radius-pill">
         <div class="container"><br>
             <div class="row">
                 <svg 
