--- a/Freequiz/templates/index.html
+++ b/Freequiz/templates/index.html
@@ -15,14 +15,14 @@
         {% if notification %}
             {% include 'includes/notification.html' %}
         {% endif %}
-        {% for test in tests %}
+        {% for quiz in quizes %}
             <div class="cardss card col-4 top-50 start-50 translate-middle-x border-0 border-radius-pill">
                 <div class="">
                     <div class="card-body border-0">
-                        <h4 class="card-title">{{ test.name }}</h4>
+                        <h4 class="card-title">{{ quiz.name }}</h4>
                         <hr>
                         <p class="card-text text-secondary">{{ test.description }}</p>
-                        <a class="btn btn-outline-primary rounded-pill" href="{% url 'tests:quiz' test.slug %}">Пройти тест</a>
+                        <a class="btn btn-outline-primary rounded-pill" href="{% url 'quizes:quiz' quiz.slug %}">Пройти тест</a>
                     </div>    
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         <div class="col text-center">
                             <p class="card-text font-weight-bold"><i>Вы можете создать свой тест</i></p>
                             <div class="d-grid gap-2">
-                                <a class="btn btn-outline-dark rounded-pill" href="{% url 'admin:tests_test_add' %}">Создать тест</a> 
+                                <a class="btn btn-outline-dark rounded-pill" href="{% url 'admin:quizes_quiz_add' %}">Создать тест</a> 
                             </div>
                         </div>
                     </div>
